--- a/index.html
+++ b/index.html
@@ -3,10 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year
-    </title>
+    <title>New Year</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d8aecf8097.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="header-container">
+            <div class="header-content">
+                <h1>All Thinks Are Possible If You believe</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button class="btn">Contact Us</button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="info-container">
+                <div class="info-img">
+                    <div class="info-bg"></div>
+                    <img src="images/person.png" alt="">
+                </div>
+                <div class="info-text">
+                    <h1>My failures of <br>previous year</h1>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="plans">
+            <h1>My Plans</h1>
+            <div class="plan-container">
+                <div class="plan-box">
+                    <img src="images/icons/web.png" alt="">
+                    <h1>Web Development</h1>
+                    <p>I want to start</p>
+                </div>
+                <div class="plan-box">
+                    <img src="images/icons/js.png" alt="">
+                    <h1>Javascript</h1>
+                    <p>I want to learn</p>
+                </div>
+                <div class="plan-box">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h1>Smoking Habit</h1>
+                    <p>I want to end</p>
+                </div>
+                <div class="plan-box">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h1>ecommerce</h1>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
