Added call now seciton

--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="call-container">
+                <div class="call-img">
+                    <div class="call-content">
+                        <h1>Awlays keep a positive <br>mindset</h1>
+                        <button class="btn">Call Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
