--- a/index.html
+++ b/index.html
@@ -76,5 +76,25 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <div class="contact">
+                <h1>Future</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <ul>
+                    <li><img src="images/icons/fb.png" alt=""></li>
+                    <li><img src="images/icons/twitter.png" alt=""></li>
+                    <li><img src="images/icons/youtube.png" alt=""></li>
+                </ul>
+            </div>
+            <div class="subscribe">
+                <h3>Subscribe</h3>
+                <input type="email" placeholder="Enter Your Email">
+                <button class="btn btn-subscribe">Subscribe</button>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
